--- a/source/css/main.css
+++ b/source/css/main.css
@@ -2,3 +2,14 @@ nav#navbar ul li{
   display: inline;
   
 }
+@media print{
+  @page{
+    size: A4 portrait;
+    margin: 0.5cm;
+    orphans:4;
+    widows:2;
+  }
+  body{
+    background-color: rgb(184, 165, 149);
+  }
+}
