--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,4 +1,11 @@
-nav#navbar ul li{
-  display: inline;
-  
+@media screen and (min-width:1400px){
+
+  nav#navbar ul li{
+    display: inline;
+
+  }
+}
+
+@media print {
+
 }
