--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,29 +1,32 @@
-<<<<<<< HEAD
-@media screen and (min-width:1400px){
-
-  nav#navbar ul li{
-    display: inline;
-
+@page{
+  size: A4 portrait;
+  margin: 0.5cm;
+  orphans:4;
+  widows:2;
+}
+@media screen{
+  p{
+    margin: 0px;
+  }
+  div.header{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas: "profile about about";
+    background-color: beige;
+  }
+  img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+  div.profile{
+    grid-area: profile;
+  }
+  div.about{
+    grid-area: about;
+  }
+  div.name{
+    font-size: 24pt;
   }
 }
-
-@media print {
-
-}
-=======
-nav#navbar ul li{
-  display: inline;
-  
-}
-@media print{
-  @page{
-    size: A4 portrait;
-    margin: 0.5cm;
-    orphans:4;
-    widows:2;
-  }
-  body{
-    background-color: rgb(184, 165, 149);
-  }
-}
->>>>>>> 8ab9e5b57e809301c214ba91c09d58a3852ae3f2
