--- a/source/style/print.css
+++ b/source/style/print.css
@@ -1,10 +1,10 @@
 @page{
   size: A4 portrait;
-  margin: 0mm;
+  margin: 0mm 5mm;
 }
 div#header{
   margin-top: 5mm;
-  height: 8em;
+  /* height: 9em; */
 }
 div#header,div#contact{
   display: grid;
@@ -40,6 +40,7 @@ div#skill ul li{
   border: 1px solid black;
   padding: 0.2em;
   border-radius: 2px;
+  font-size: 0.7em;
 }
 div#experience ul li,div#education ul li{
   position: relative;
@@ -72,8 +73,6 @@ div#education ul li p#department{
   top: 1.2em;
   left: 25em;
 }
-
-.pageBreak{page-break-before: always;}
 
 /* div#education ul li{
   display: grid;
