--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1,10 +1,6 @@
-/* @import "small.css" screen and (max-width:768px); */
-
+@import "small.css" screen and (max-width:768px);
 @import "print.css" print;
 
-body *{
+*{
   margin: 0mm;
-}
-body{
-  margin: 8mm;
 }
