--- a/assets/style/mobile.css
+++ b/assets/style/mobile.css
@@ -1,48 +1,57 @@
-*{
-  margin: 0px;
-  /* border:1px solid black; */
-  /* border:0px; */
-  padding: 0px;
+body,body *{
+  margin:0px;
+  border:0px;
+  padding:0px;
 }
 
-.statusBar,.controlBar{
+header{
+  position: fixed;
+  width: 100%;
+  height: 7em;
+  padding-top: 2px;
+  display: grid;
+  grid-template-columns: 15% 30% 15%;
+  grid-template-rows: 1em 6em;
+  justify-content: space-between;
+  text-align: center;
+  background-color: #e5e5e5;
+  border-bottom:1px solid gray;
+  overflow-y: hidden;
+  transition: 1s;
+}
+
+.header_button{
   display:grid;
-  grid-template-columns:33% auto 33%;
-  background-color: #e5e5ea;
+  align-items:center;
+  color:#007aff;
+  font-size:x-large;
 }
 
-.align_left{
-  display: grid;
-  align-items: center;
-  justify-content: left;
-}
-.align_centre{
-  display: grid;
-  align-items: center;
-  justify-content: center;
-}
-.align_right{
-  display: grid;
-  align-items: center;
-  justify-content: right;
+header img{
+  width:60%;
+  border-radius:50%;
 }
 
-.control_button{
-  color: #007aff;
-  font-size: large;
+
+
+footer{
+  position: fixed;
+  background-color: #ffffff;
+  bottom: 0%;
+  display: grid;
+  grid-template-columns: 10% 10% auto;
+  text-align: center;
+  align-items: center;
+  width: 100%;
 }
 
-.controlBar img{
-  width: 60%;
-  height: 60%;
-  margin: 1vh 0vw;
-  object-fit: cover;
-  background-position:top;
-  border-radius: 50%;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+footer p{
+  border: 1px solid black;
+  border-radius: 1em;
+  margin: 2px 8px;
 }
+
+/* ------------------- */
 
 nav.overlay {
   height: 100%;
@@ -53,92 +62,24 @@ nav.overlay {
   left: 0;
   background-color: rgba(255,255,255, 0.9);
   overflow-x: hidden;
-  transition: 2.5s;
+  transition: 1s;
 }
 
 main.overlay2 {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  top: 20%;
-  left: 0%;
+  padding: 8px 8px;
+  /* height: 100%; */
+  /* position: fixed; */
+  /* top: 20%; */
+  /* left: 0%; */
   z-index: -1;
   background-color: #ffffff;
-  /* background-color: #e5e5ea; */
+  /* background-color: #e5e5e5; */
   /* background-color: rgba(0,0,0, 0.9); */
-  overflow-x: hidden;
-  transition: 2.5s;
-}
-.controlBar{
-  /* padding: 15px 0px; */
-  width: 100%;
-  height: 10%;
-  position: fixed;
-  top: 1.2em;
-  left: 0;
-  background-color: #e5e5ea;
-  overflow-y: hidden;
-  transition: 2.5s;
-}
-footer{
-  position: fixed;
-  bottom: 0%;
-  text-align: center;
-  width: 100%;
+  overflow-x: scroll;
+  transition: 1s;
 }
 
-@media screen and (max-width:0px){/*1024px){*/
-  div > p{
-    display: inline-block;
-    font-size: large;
-    width: 32%;
-  }
-
-
-  .controlBar p{
-    /* text-align: left; */
-    height: 100%;
-    text-align: center;
-    font-size: x-large;
-    z-index: 1;
-    vertical-align: middle;
-    border: 1px solid black;
-  }
-
-  .overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-  }
-  
-  .overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-  }
-  
-  .overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-  }
-  
-  @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-    }
-  }
+main.overlay2 h2,main.overlay2 p{
+  margin: 8px;
+  border: 1px solid black;
 }
